<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="item" type="String"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login">


        <ImageButton
            android:id="@+id/appSplashScreenLogoButton"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:background="@drawable/icon_bg"
            android:src="@drawable/ic_baseline_desktop_mac_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.289" />

        <TextView
            android:id="@+id/apploginName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/signup"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.886"
            app:layout_constraintStart_toEndOf="@+id/apploginEditTextForgetPass"
            app:layout_constraintTop_toBottomOf="@+id/apploginEditTextPassword"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/app_login_EditTextEmail"
            android:layout_width="357dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:hint="@string/enterEmail"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/apploginEditTextPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appSplashScreenLogoButton"
            app:layout_constraintVertical_bias="0.918" />

        <EditText
            android:id="@+id/apploginEditTextPassword"
            android:layout_width="357dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="56dp"
            android:hint="@string/enterPassword"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@+id/apploginButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/apploginEditTextForgetPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/forgetPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/apploginEditTextPassword"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/apploginButton"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="272dp"
            android:backgroundTint="@color/red"
            android:text="@string/login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
